- Fix logo size on mobile - Fix button color

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -18,4 +18,5 @@
 	padding-bottom: 10px;
 	font-weight: bold;
 	vertical-align: bottom;
+	color: black;
 }
